k8s/k3s/apiserver/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: api
spec:
  selector:
    matchLabels:
      app: api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - image: docker-registry.local/k8s-learn-api-v1:latest
          name: api
          ports:
            - containerPort: 8080
              name: api
