k8s/k3s/apiserver/apidb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apidb
  namespace: api
spec:
  selector:
    matchLabels:
      app: apidb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: apidb
    spec:
      containers:
        - image: mariadb:10.7
          name: apidb
          ports:
            - containerPort: 13306
              name: apidb-port
          volumeMounts:
            - name: apidb-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: apidb-persistent-storage
          persistentVolumeClaim:
            claimName: apidb-pv-claim
