k8s/k3s/apiserver/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: api
spec:
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
