k8s/k3s/apiserver/apidb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apidb-service
  namespace: api
spec:
  ports:
    - port: 3306
      targetPort: apidb-port
  selector:
    app: apidb
  clusterIP: None
